Thu Apr 11 19:53:22 UTC 2013  Huang-Ming Huang  <huangh@ociweb.com>

        * ace/Log_Category.h:
        Fixed some documentation problems.

Thu Apr 11 19:42:14 UTC 2013  Huang-Ming Huang  <huangh@ociweb.com>

        * ace/Log_Category.h:
        Fixed ACELIB_ERROR_RETURN()  control reaches end of non-void function warning.

        * tests/Log_Msg_Test.cpp:
        Added test for ACE_Log_Category

Thu Apr 11 17:54:55 UTC 2013  Huang-Ming Huang  <huangh@ociweb.com>

        * ace/ace_for_tao.mpc:
        Added missing file.

Thu Apr 11 15:45:41 UTC 2013  Huang-Ming Huang  <huangh@ociweb.com>

        * ace/ACE.cpp:
        * ace/ARGV.cpp:
        * ace/ATM_Acceptor.inl:
        * ace/ATM_Acceptor.cpp:
        * ace/ATM_Addr.cpp:
        * ace/ATM_Connector.inl:
        * ace/ATM_Connector.cpp:
        * ace/ATM_QoS.cpp:
        * ace/ATM_Stream.cpp:
        * ace/Acceptor.cpp:
        * ace/Activation_Queue.cpp:
        * ace/Addr.cpp:
        * ace/Assert.cpp:
        * ace/Asynch_Acceptor.cpp:
        * ace/Asynch_Connector.cpp:
        * ace/Asynch_Pseudo_Task.cpp:
        * ace/Atomic_Op.cpp:
        * ace/Atomic_Op_GCC_T.cpp:
        * ace/Atomic_Op_T.cpp:
        * ace/Auto_IncDec_T.cpp:
        * ace/Barrier.cpp:
        * ace/Based_Pointer_T.cpp:
        * ace/Basic_Stats.cpp:
        * ace/Bound_Ptr.inl:
        * ace/CE_Screen_Output.cpp:
        * ace/Cache_Map_Manager_T.cpp:
        * ace/Cached_Connect_Strategy_T.cpp:
        * ace/Caching_Strategies_T.inl:
        * ace/Caching_Strategies_T.cpp:
        * ace/Capabilities.cpp:
        * ace/Codecs.cpp:
        * ace/Condition_Recursive_Thread_Mutex.cpp:
        * ace/Condition_T.cpp:
        * ace/Condition_Thread_Mutex.cpp:
        * ace/Configuration.cpp:
        * ace/Connector.cpp:
        * ace/Containers_T.cpp:
        * ace/DEV_Addr.cpp:
        * ace/DEV_Connector.h:
        * ace/DEV_Connector.inl:
        * ace/DEV_IO.cpp:
        * ace/DLL.cpp:
        * ace/DLL_Manager.cpp: